# runebender-core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.agents/active/: _template.md
src/: category.rs  lib.rs  mark_color.rs  shaping.rs  theme.rs
src/editing/: mod.rs
src/model/: glyph_metadata.rs  mod.rs
themes/: runebender.json
