[package]
name = "runebender-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Platform-independent core types for the Runebender font editor"
repository = "https://github.com/eliheuer/runebender-core"

[lib]
name = "runebender_core"
path = "src/lib.rs"

[dependencies]
# Structured metadata shared over serde_json between core and UI hosts.
serde = { version = "1.0", features = ["derive"] }

# Unicode general-category lookup, used by `category::GlyphCategory`.
# Same crate as runebender-xilem, just hoisted here so both editors
# share the categorization.
unicode-general-category = "0.6"
